nav gap fix

--- a/src/style.css
+++ b/src/style.css
@@ -23,8 +23,10 @@ a {
   cursor: pointer;
 }
 
-.nav__links li a {
+.nav__links {
   transition: all 0.3s ease 0s;
+  display: flex;
+  list-style: none;
 }
 
 .nav__links li a:hover {
@@ -47,7 +49,6 @@ a {
 
 li {
   position: relative;
-  display: inline-block;
   text-transform: uppercase;
   padding: 0 10px;
 }
@@ -69,7 +70,7 @@ li:last-of-type {
   display: block;
   height: 4px;
   background-color: var(--nav-hover);
-  border-radius: 50;
+  border-radius: 20%;
   position: absolute;
   bottom: -22px;
   right: 10px;
